--- a/drop-down-panel.html
+++ b/drop-down-panel.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      /* Add some styling for the panel */
-    </style>
-  </head>
-  <body>
-    <!-- Add a form for the user to enter the blocklist and keywords -->
-    <a href="./option-panel.html"></a>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+ 
+</head>
+<body>
+  <h3>Discipline master</h3>
+  <button id="settings-button">update settings</button>
+  <script src="./drop-down-panel.js"></script>
+</body>
 </html>
