--- a/drop-down-panel.html
+++ b/drop-down-panel.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
- 
+  <title>drop down panel</title>
+  <link rel="stylesheet" href="./drop-down-panel.css">
 </head>
 <body>
   <h3>Discipline master</h3>
