--- a/option-panel.html
+++ b/option-panel.html
@@ -8,6 +8,10 @@
     <title>Option Panel</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script> -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./option-panel.css">
 </head>
 <body>
     <div class="container">
@@ -24,16 +28,19 @@
     <form id="form" class="form-group">
         <label for="blocklist">Blocklist:</label><br>
         <input type="text"  class="form-control" id="input-blocklist" name="blocklist"></input><br>
-        <button class="btn btn-primary bg-secondary" id="add-blocklist-btn">Add to block list</button>
+        <button class="btn btn-secondary" id="add-blocklist-btn">Add to block list</button>
         <ul id="inject-blocklist" class="list-group">
             <li>this is a block list</li>
         </ul>
         <br>
         <label for="keywords">Keywords:</label><br>
         <input type="text"  class="form-control" id="input-keywords" name="keywords"></input><br>
-        <button class="btn btn-primary bg-secondary" id="add-keyword-btn">Add keyword</button>
+        <button class="btn btn-secondary" id="add-keyword-btn">Add keyword</button>
+        <ul id="inject-keywords" class="list-group">
+            <li>this is a keywords list</li>
+        </ul>
         <br>
-        <button type="submit" class="btn btn-primary bg-success" >save</button>
+        <button type="submit" class="btn btn-success" >save</button>
         <button class="btn btn-primary">export</button>
         <button class="btn btn-primary">inport</button>
     </form>
