--- a/option-panel.html
+++ b/option-panel.html
@@ -17,17 +17,27 @@
 <body>
     <div class="container">
     <h2>Basic settings section</h2>
-    <div class="custom-control custom-switch">
-        <input type="checkbox" class="form-check-input" id="general-block-switch" >
-        <label class="custom-control-label" for="customSwitch1">block switch</label>
-    </div>
+        <div class="custom-control custom-switch">
+            <input type="checkbox" class="form-check-input" id="general-block-switch" >
+            <label class="custom-control-label" for="customSwitch1">Block Switch</label>
+        </div>
+        <input type="text" class="form-text-input" id="input-redirect-url" >
+        <label class="custom-control-label" for="customSwitch1">Redirect URL</label>
+        <button class="btn btn-success" id="confirm-redirect-url">Save</button>
     <hr>
 
 
 
-    <h2>Block list and key words section</h2>
+    <h2>Content control section</h2>
     <form id="form" class="form-group">
-        <label for="blocklist">Blocklist:</label><br>
+        <div class="row">
+            <div class="custom-control custom-switch">
+                <input type="checkbox" class="form-check-input" id="whitelist-switch" >
+                <label class="custom-control-label" for="customSwitch1">Whitelist Mode</label>
+            </div>
+        </div>
+
+        <label for="blocklist" id="label-blocklist">Blocklist:</label><br>
         <div class="row">
             <div class="col-md-8">
                 
