--- a/drop-down-panel.html
+++ b/drop-down-panel.html
@@ -6,10 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>drop down panel</title>
   <link rel="stylesheet" href="./drop-down-panel.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 <body>
-  <h3>Discipline master</h3>
-  <button id="settings-button">update settings</button>
+  <div class="container">
+    <h3>Discipline master</h3>
+    <div class="row">
+     
+        <button type="button" class="btn btn-info" id="open-switch-button">Open Switch</button>
+      
+  </div>
+  <hr>
+  <div class="row">
+    <button type="button" class="btn btn-danger" id="settings-button">update settings</button>
+  </div>
+</div>
   <script src="./drop-down-panel.js"></script>
 </body>
 </html>
