--- a/option-panel.html
+++ b/option-panel.html
@@ -19,10 +19,10 @@
     <h2>Basic settings section</h2>
         <div class="custom-control custom-switch">
             <input type="checkbox" class="form-check-input" id="general-block-switch" >
-            <label class="custom-control-label" for="customSwitch1">Block Switch</label>
+            <label class="custom-control-label" for="general-block-switch">Block Switch</label>
         </div>
         <input type="text" class="form-text-input" id="input-redirect-url" >
-        <label class="custom-control-label" for="customSwitch1">Redirect URL</label>
+        <label class="custom-control-label" for="input-redirect-url">Redirect URL</label>
         <button class="btn btn-success" id="confirm-redirect-url">Save</button>
         <div class="row">
             <div class="col-md-6">
@@ -45,11 +45,11 @@
         <div class="row">
             <div class="custom-control custom-switch">
                 <input type="checkbox" class="form-check-input" id="whitelist-switch" >
-                <label class="custom-control-label" for="customSwitch1">Whitelist Mode</label>
+                <label class="custom-control-label" for="whitelist-switch">Whitelist Mode</label>
             </div>
         </div>
 
-        <label for="blocklist" id="label-blocklist">Blocklist:</label><br>
+        <label for="input-blocklist" id="label-blocklist">Blocklist:</label><br>
         <div class="row">
             <div class="col-md-8">
                 
@@ -69,7 +69,7 @@
         <br>
         <hr>
         <br>
-        <label for="keywords">Keywords:</label><br>
+        <label for="input-keywords">Keywords:</label><br>
         <div class="row">
             <div class="col-md-8">
                 <input type="text"  class="form-control" id="input-keywords" name="keywords"></input><br>
